@@ -214,33 +214,17 @@ public class AdminCatalogController implements AdminCatalogApi {
 
     @Override
     public ResponseEntity<Map<String, Object>> bulkDeleteProducts(List<UUID> ids) {
-        int deleted = 0;
-        List<String> errors = new ArrayList<>();
-        for (UUID id : ids) {
-            try {
-                catalogUseCase.deleteProduct(id); // per-id tx + cache evict; refused if it has orders
-                deleted++;
-            } catch (RuntimeException ex) {
-                errors.add(id + ": " + ErrorMessages.humanize(ex));
-            }
-        }
-        return ResponseEntity.ok(Map.of("deleted", deleted, "failed", errors.size(), "errors", errors));
+        CatalogUseCase.BulkOutcome result = catalogUseCase.bulkDeleteProducts(ids);
+        return ResponseEntity.ok(Map.of("deleted", result.succeeded(), "failed", result.failed(),
+                "errors", result.errors()));
     }
 
     /** Bulk publish/pause/archive the selected products (sets status: ACTIVE/PAUSED/ARCHIVED). */
     @PutMapping("/products/bulk-status")
     public ResponseEntity<Map<String, Object>> bulkProductStatus(@RequestBody BulkStatusRequest req) {
-        int succeeded = 0;
-        List<String> errors = new ArrayList<>();
-        for (UUID id : req.ids()) {
-            try {
-                catalogUseCase.updateStatus(id, req.status());
-                succeeded++;
-            } catch (RuntimeException ex) {
-                errors.add(id + ": " + ErrorMessages.humanize(ex));
-            }
-        }
-        return ResponseEntity.ok(Map.of("succeeded", succeeded, "failed", errors.size(), "errors", errors));
+        CatalogUseCase.BulkOutcome result = catalogUseCase.bulkUpdateStatus(req.ids(), req.status());
+        return ResponseEntity.ok(Map.of("succeeded", result.succeeded(), "failed", result.failed(),
+                "errors", result.errors()));
     }
 
     public record BulkStatusRequest(List<UUID> ids, String status) {
@@ -268,24 +252,22 @@ public class AdminCatalogController implements AdminCatalogApi {
 
     @Override
     public ResponseEntity<StreamingResponseBody> exportProductsNdjson(int batch) {
-        int safeBatch = Math.min(Math.max(batch, 1), MAX_BATCH);
+        int safeBatch = Math.clamp(batch, 1, MAX_BATCH);
         // Stream one product per line; keyset-paginate and flush each batch so memory stays bounded to a
         // single page regardless of the total number of products (scales to millions).
         StreamingResponseBody body = out -> {
             UUID after = null;
-            while (true) {
+            boolean hasMore = true;
+            while (hasMore) {
                 CatalogUseCase.ProductExportBatch page = catalogUseCase.exportBatchAfter(after, safeBatch);
-                if (page.items().isEmpty()) {
-                    break;
-                }
                 for (BulkProductDtoIn dto : page.items()) {
                     out.write(objectMapper.writeValueAsBytes(dto));
                     out.write('\n');
                 }
                 out.flush();
-                if (page.items().size() < safeBatch) {
-                    break;
-                }
+                // Una página incompleta (o vacía) es el fin del catálogo: la paginación por keyset devuelve
+                // siempre el tamaño pedido mientras queden productos.
+                hasMore = page.items().size() >= safeBatch;
                 after = page.lastId();
             }
         };
@@ -297,22 +279,18 @@ public class AdminCatalogController implements AdminCatalogApi {
 
     @Override
     public ResponseEntity<BulkResultDtoOut> importProductsNdjson(HttpServletRequest request, int batch) {
-        int safeBatch = Math.min(Math.max(batch, 1), MAX_BATCH);
+        int safeBatch = Math.clamp(batch, 1, MAX_BATCH);
         NdjsonImportAccumulator acc = new NdjsonImportAccumulator();
         List<BulkProductDtoIn> buffer = new ArrayList<>(safeBatch);
         try (BufferedReader reader = new BufferedReader(
                 new InputStreamReader(request.getInputStream(), StandardCharsets.UTF_8))) {
             String line;
             while ((line = reader.readLine()) != null) {
-                if (line.isBlank()) {
+                BulkProductDtoIn row = parseNdjsonRow(line, acc);
+                if (row == null) {
                     continue;
                 }
-                try {
-                    buffer.add(objectMapper.readValue(line, BulkProductDtoIn.class));
-                } catch (Exception ex) {
-                    acc.recordParseError(ex.getMessage());
-                    continue;
-                }
+                buffer.add(row);
                 if (buffer.size() >= safeBatch) {
                     acc.merge(catalogUseCase.bulkCreateProducts(buffer));
                     buffer.clear();
@@ -325,6 +303,23 @@ public class AdminCatalogController implements AdminCatalogApi {
             acc.merge(catalogUseCase.bulkCreateProducts(buffer));
         }
         return ResponseEntity.ok(acc.toResult());
+    }
+
+    /**
+     * Convierte una línea NDJSON en fila de carga. Devuelve {@code null} —y anota el error en el
+     * acumulador— si la línea está en blanco o no es JSON válido: una línea corrupta a mitad de un
+     * fichero de miles no puede abortar la importación entera, se cuenta como fallida y se sigue.
+     */
+    private BulkProductDtoIn parseNdjsonRow(String line, NdjsonImportAccumulator acc) {
+        if (line.isBlank()) {
+            return null;
+        }
+        try {
+            return objectMapper.readValue(line, BulkProductDtoIn.class);
+        } catch (Exception ex) {
+            acc.recordParseError(ex.getMessage());
+            return null;
+        }
     }
 
     /** Accumulates the per-batch results of an NDJSON import while keeping the error list bounded. */
