@@ -51,7 +51,7 @@ public class OperatorEarningsService {
     /** Histórico paginado del operador autenticado (intenta OpenSearch; si falla, Postgres). */
     @Transactional(readOnly = true)
     public OperatorActionPage myHistory(String fromDate, String toDate, int page, int size) {
-        return history(SecurityUtils.currentSubject(), fromDate, toDate, page, size);
+        return historyPage(SecurityUtils.currentSubject(), fromDate, toDate, page, size);
     }
 
     /** Reindexa en OpenSearch todas las acciones de operador (botón admin "Reindexar"). Devuelve el nº indexado. */
@@ -69,17 +69,27 @@ public class OperatorEarningsService {
     /** Histórico paginado (admin): de un operador concreto o de todos. */
     @Transactional(readOnly = true)
     public OperatorActionPage history(String operatorSubject, String fromDate, String toDate, int page, int size) {
+        return historyPage(operatorSubject, fromDate, toDate, page, size);
+    }
+
+    /**
+     * Consulta real del histórico, sin anotación transaccional, para que {@link #myHistory} la reutilice
+     * sin llamarse a sí misma: la autoinvocación no pasa por el proxy, así que el {@code @Transactional}
+     * del método invocado no se aplicaba. La transacción la abre el método público de entrada.
+     */
+    private OperatorActionPage historyPage(String operatorSubject, String fromDate, String toDate, int page,
+            int size) {
         Instant from = startOf(fromDate, 90);
         Instant to = endOf(toDate);
-        int pageSize = Math.min(Math.max(size, 1), 200);
+        int pageSize = Math.clamp(size, 1, 200);
         // Consulta preferente desde OpenSearch (indexado); si no responde, fallback a Postgres.
         try {
-            var res = indexer.search(operatorSubject, from, to, page, pageSize);
+            Map<String,Object> res = indexer.search(operatorSubject, from, to, page, pageSize);
             @SuppressWarnings("unchecked")
             List<Map<String, Object>> hits = (List<Map<String, Object>>) res.get("items");
             if (hits != null) {
                 List<OperatorAction> items = new ArrayList<>();
-                for (var m : hits) {
+                for (Map<String,Object> m : hits) {
                     items.add(new OperatorAction(str(m, "operatorSubject"), str(m, "operatorEmail"),
                             str(m, "operatorName"), str(m, "orderId"), str(m, "orderNumber"), str(m, "action"),
                             lng(m, "commissionCnyCents"), (int) lng(m, "itemCount"), inst(m.get("processedAt"))));
